# mcu-demo

./: LICENSE  README.md
0. zjcszn/st/stm32f4/: CMakeLists.txt
0. zjcszn/st/stm32f4/Core/Inc/: main.h  stm32f4xx_hal_conf.h
0. zjcszn/st/stm32f4/Core/Src/: main.c
0. zjcszn/st/stm32f4/Drivers/CMSIS/Device/ST/STM32F4xx/Include/: stm32f407xx.h
0. zjcszn/st/stm32f4/Flash/: log.txt
0. zjcszn/st/stm32f4/Middleware/cherryusb/port/dwc2/: usb_dc_dwc2.c
0. zjcszn/st/stm32f4/Middleware/cherryusb/user/: cdc_acm_msc.c  cherryusb_demo.h  usb_config.h
0. zjcszn/st/stm32f4/Middleware/fatfs/: ff.c  ff.h  ffsystem.c
0. zjcszn/st/stm32f4/Middleware/freertos/: CMakeLists.txt
0. zjcszn/st/stm32f4/Middleware/freertos/include/: FreeRTOS.h  task.h
0. zjcszn/st/stm32f4/Middleware/freertos/portable/: CMakeLists.txt
0. zjcszn/st/stm32f4/Middleware/lvgl/docs/widgets/extra/: meter.md
0. zjcszn/st/stm32f4/Middleware/lvgl/env_support/cmake/: custom.cmake
0. zjcszn/st/stm32f4/Middleware/lvgl/examples/porting/: lv_port_disp.h
0. zjcszn/st/stm32f4/Middleware/lvgl/src/extra/: README.md
0. zjcszn/st/stm32f4/Middleware/lwip/: CMakeLists.txt  lwipopts.h
0. zjcszn/st/stm32f4/Middleware/lwip/doc/doxygen/output/html/: structautoip.html
0. zjcszn/st/stm32f4/Middleware/lwip/ports/drv/: Driver_ETH_MAC.h  MAC_STM32F4XX.c  PHY_LAN8720.h  RTE_Device.h
0. zjcszn/st/stm32f4/Middleware/lwip/src/api/: tcpip.c
0. zjcszn/st/stm32f4/Middleware/lwip/src/apps/http/: cookies.c
0. zjcszn/st/stm32f4/Middleware/lwip/src/include/lwip/: err.h
0. zjcszn/st/stm32f4/Middleware/lwip/src/include/lwip/apps/: httpd.h
0. zjcszn/st/stm32f4/Middleware/mbedtls/include/mbedtls/: mbedtls_config.h
0. zjcszn/st/stm32f4/Middleware/teenyusb/third_part/fatfs/source/: diskio.c
0. zjcszn/st/stm32f4/User/APP/: ext_heap.h  net_iperf.c  net_iperf.h  net_mdns.h  net_sntp.c  tcpecho.c  udpecho.c
0. zjcszn/st/stm32f4/User/APP/corehttp_client/: corehttp_client.c  corehttp_client.h
0. zjcszn/st/stm32f4/User/APP/coremqtt_client/: coremqtt_client.c  coremqtt_demo.h
0. zjcszn/st/stm32f4/User/APP/custom_gui/: events_init.h  gui_guider.h
0. zjcszn/st/stm32f4/User/APP/custom_gui/images/: _cloudshell_alpha_50x50.c  _photo_alpha_50x50.c  _temp_alpha_50x50.c
0. zjcszn/st/stm32f4/User/APP/web_server/: http_server.h  httpd_cgi.c  httpd_cgi.h  httpd_post.c  httpd_ssi.c
0. zjcszn/st/stm32f4/User/BSP/: bsp_adc.c  bsp_button.c  bsp_button.h  bsp_camera.c  bsp_encoder_tim.h  bsp_fsmc_lcd.c  bsp_fsmc_sram.c  bsp_led.h  bsp_lvgl.c  bsp_lvgl.h  bsp_rng.h  bsp_sdcard.c  bsp_soft_i2c.c  bsp_soft_i2c.h  dev_uart.h
1. armfly/1. h7tools/Project/MDK-ARM(uV5)/: startup_stm32h743xx.s
1. armfly/1. h7tools/User/app/inc/: param.h
1. armfly/1. h7tools/User/app/src/: main.c  status_programmer.c  status_system_set.c
1. armfly/1. h7tools/User/bsp/inc/: bsp_key.h  bsp_qspi_w25q256.h
1. armfly/1. h7tools/User/bsp/src/: bsp_user_lib.c
1. armfly/1. h7tools/User/modbus/: modbus_reg_addr.h  modbus_register.c  modbus_slave.h
1. armfly/1. h7tools/User/programmer/: prog_if.h
1. armfly/2. project template/stm32h7/dual_netif/Doc/: 01.例程功能说明.txt  02.例程修改记录.txt
1. armfly/2. project template/stm32h7/dual_netif/Project/: output(mdk).hex  说明.txt
1. armfly/2. project template/stm32h7/dual_netif/User/: includes.h  main.c
1. armfly/2. project template/stm32h7/rtos_template_freertos/Doc/: 01.例程功能说明.txt  02.例程修改记录.txt
1. h7tools/User/bsp/inc/: bsp_user_lib.h
1. h7tools/User/bsp/src/: bsp_emmc.c
1. h7tools/User/programmer/: prog_if.c
3. 全双工数字对讲机/Application/: adpcm.h  audioFuction.h  consert.h  main.c
3. 全双工数字对讲机/FreeRTOS/include/: FreeRTOSConfig.h  cpu_utils.h
3. 全双工数字对讲机/FreeRTOS/port/MemMang/: heap_4.c
3. 全双工数字对讲机/FreeRTOS/src/: cmsis_os.c  cpu_utils.c
3. 全双工数字对讲机/HardWare/: bsp.c  bsp.h  i2c.c  i2c.h  i2c0.h  i2s.c  i2s.h  wm8978.c  wm8978.h
3. 全双工数字对讲机/Libraries/drivers_nrf/clock/: nrf_drv_clock.c
3. 全双工数字对讲机/Libraries/drivers_nrf/delay/: nrf_delay.h
3. 全双工数字对讲机/Libraries/log/: nrf_log.h
3. 全双工数字对讲机/Libraries/util/: sdk_common.h  sdk_errors.h
3. 全双工数字对讲机/MDK-ARM/: Project.uvoptx  Project.uvprojx
3. 全双工数字对讲机/MDK-ARM/Objects/: DJJ_V1.hex  Light.hex
3. 全双工数字对讲机/MDK-ARM/Objects2/: DJJ_V2.hex
3. 全双工数字对讲机/MDK-ARM/RTE/Device/nRF52832_xxAA/: system_nrf52.c  (+1 more)
3. 全双工数字对讲机/MDK-ARM/RTE/_v1/: RTE_Components.h
3. 全双工数字对讲机/MDK-ARM/RTE/_v2/: RTE_Components.h
3. 全双工数字对讲机/MDK-ARM/RTE/_walk-on-radio/: RTE_Components.h
3. 全双工数字对讲机/Speex/: config.h  speexC.c  speexC.h
3. 全双工数字对讲机/Speex/Speex/libspeex/: filters.c  ltp.c  modes.c
3. 全双工数字对讲机/Speex/SpeexDsp/libspeexdsp/: fftwrap.c
3. 全双工数字对讲机/Task/: task_audio.h  task_keyscan.c  task_rfIT.c  task_rfIT.h  task_sync.h
3. 全双工数字对讲机/User/: core.c  walkie.c
3. 全双工数字对讲机/全双工数字对讲机/Application/: adpcm.c  audioFuction.c  consert.c
3. 全双工数字对讲机/全双工数字对讲机/FreeRTOS/CMSIS/: port_cmsis_systick.c
3. 全双工数字对讲机/全双工数字对讲机/FreeRTOS/include/: cmsis_os.h
3. 全双工数字对讲机/全双工数字对讲机/HardWare/: esb.c  esb.h  i2c0.c
3. 全双工数字对讲机/全双工数字对讲机/Libraries/log/: nrf_log_ctrl.h
3. 全双工数字对讲机/全双工数字对讲机/MDK-ARM/: Project.uvguix.PC1  Project.uvguix.wangs
3. 全双工数字对讲机/全双工数字对讲机/MDK-ARM/Objects2/: DJJ_V2.axf
3. 全双工数字对讲机/全双工数字对讲机/Task/: task_audio.c  task_keyscan.h  task_sync.c  testwav.c
3. 全双工数字对讲机/全双工数字对讲机/User/: core.h  walkie.h
st/stm32f4/demo_freertos/stm32f4_usb_demo/: .mxproject  ARMClang_Cortex-M4.cmake  usb_demo.sct
st/stm32f4/demo_freertos/stm32f4_usb_demo/Middleware/cherryusb/: CMakeLists.txt
st/stm32f4/demo_freertos/stm32f4_usb_demo/Middleware/cherryusb/core/: usbd_core.c
st/stm32f4/demo_freertos/stm32f4_usb_demo/Middleware/cherryusb/demo/phytium-e2000/usbhost/src/: cmd_usb.c
(+302 files in other folders)
